Updated libs to their latest versions